--- a/default.css
+++ b/default.css
@@ -310,10 +310,14 @@
 	#header-wrapper
 	{
 		background: #333333;
+	    position: fixed;
+	    width: 100%;
+	    top: 0px;
 	}
 
 	#header
 	{
+	    
 		position: relative;
 		padding: 3em 0em;
 	}
@@ -395,6 +399,7 @@
 
 	#banner
 	{
+        margin-top: 33px;
 		overflow: hidden;
 		padding: 7em 0em 5em 0em;
 		background: #202020;
@@ -431,7 +436,7 @@
 
 	#page
 	{
-		padding: 5em 0em;
+		padding: 7em 0em;
 		text-align: center;
 	}
 	
@@ -497,7 +502,7 @@
 	#featured
 	{
 		overflow: hidden;
-		padding: 5em 0em;
+		padding: 7em 0em;
 		background: #009E2D;
 		color: rgba(255,255,255,.8);
 		text-align: center;
@@ -546,7 +551,7 @@
 	#extra
 	{
 		overflow: hidden;
-		padding: 5em 0em;
+		padding: 7em 0em;
 	}
 	
 	#extra .title
